--- a/src/index.css
+++ b/src/index.css
@@ -12,12 +12,17 @@
 
   line-height: 1.4;
 
-  font-family: "Inter", sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: calc(0.6rem + 0.4vw);
   color: var(--color-text);
   background: var(--color-background);
   font-weight: 300;
   padding: 0 calc(var(--size-bezel) * 3);
+}
+
+* {
+  font-family: inherit;
+  font-weight: 400;
 }
 
 .container {
