react-19-highlights: use useactionstate hook

--- a/src/components/lib/button.css
+++ b/src/components/lib/button.css
@@ -6,4 +6,10 @@ button {
   border-radius: var(--size-radius);
   font-weight: 900;
   min-width: 8rem;
+  cursor: pointer;
+}
+
+button:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
 }
