--- a/src/components/section/styles.css
+++ b/src/components/section/styles.css
@@ -6,3 +6,13 @@
   border: 3px solid var(--color-shadow, currentColor);
   box-shadow: 0.5rem 0.5rem 0 var(--color-shadow, currentColor);
 }
+
+.error {
+  color: red;
+  font-weight: 900;
+}
+
+.success {
+  color: green;
+  font-weight: 900;
+}
