--- a/src/components/section/taskList.css
+++ b/src/components/section/taskList.css
@@ -12,3 +12,9 @@
   border-bottom: 1px solid #e0e0e0;
   padding: 1rem;
 }
+
+.task-list__header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
